[gd_scene load_steps=2 format=3 uid="uid://bi35p88q2yiy4"]

[ext_resource type="Script" path="res://scripts/components/weapon_component.gd" id="1_d4ljm"]

[node name="WeaponComponent" type="Node2D"]
position = Vector2(9, 0)
script = ExtResource("1_d4ljm")

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="ReloadDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="FireDelayTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
[connection signal="timeout" from="ReloadDelayTimer" to="." method="_on_delay_timer_timeout"]
[connection signal="timeout" from="FireDelayTimer" to="." method="_on_fire_delay_timer_timeout"]
